# llm-catalog

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/openai_models/: __init__.py  __main__.py  app.py  config.py  dependencies.py  logging.py  models.py  serialization.py  store.py
src/openai_models/routes/: __init__.py  health.py  models.py  refresh.py
src/openai_models/scraper/: __init__.py  anthropic_scraper.py  api_scraper.py  capability_map.py  docs_scraper.py  gemini_scraper.py  orchestrator.py  pricing_scraper.py
tests/: conftest.py  test_health_route.py  test_models_route.py  test_refresh_route.py  test_scraper.py  test_store.py
tests/fixtures/: anthropic_api_response.json  compare_page.html  gemini_api_response.json  models_page.html  openai_api_response.json  pricing_page.html
