[project]
name = "openai-model-api"
version = "1.0.0"
description = "Production-ready REST API that scrapes and serves OpenAI model information"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23.0",
    "httpx[http2]>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "orjson>=3.10",
    "uvloop>=0.21",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "apscheduler>=3.10,<4",
    "structlog>=24.4",
    "tenacity>=9.0",
    "aiosqlite>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-beautifulsoup4>=4.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_models"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "S", "A", "C4",
    "DTZ", "T20", "RUF", "ASYNC",
]
ignore = ["S101", "B008"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "uvloop",
    "apscheduler.*",
    "lxml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=openai_models --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["openai_models"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
